drowpdown and radio btn alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    font-size: 16px;
 }
 
 
@@ -42,14 +43,13 @@ body {
     justify-content: start;
     color: aliceblue;
     margin: 1em 2em;
+    margin-bottom: 2.5rem;
 
 }
 
-/* #name-label{
-    display:flex;
-    justify-content: left;
-    align-items: start;
-} */
+.form_content>label{
+   margin-bottom: 1rem;
+}
 
 .form_content {
     font-size: 20px;
@@ -61,7 +61,6 @@ input,
 select {
     width: 100%;
     height: 3em;
-    margin-top: 2em;
 }
 
 .form_content #comments {
@@ -85,4 +84,27 @@ select {
     background-color: rgb(94, 173, 94);
     color: aliceblue;
     font-size: 0.8em;
+}
+
+.radio-options{
+    display: flex;
+    width: 100%;
+}
+.radio-option{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 30px;
+}
+.radio-option>label{
+    font-size: 20px;
+    padding: 5px 0px;
+    cursor: pointer;
+}
+input.radio{
+    width: 1rem;
+    height: 1rem;
+    margin:0;
+    margin-right: 10px;
+    cursor: pointer;
 }
